# xidooTOPIC

./: README.md  cicd_test.sh  pyproject.toml  pytest.ini  verano2026.py
.github/workflows/: publish.yml
examples/: main.py  main2.py  verano2026.py
src/embedding/: embedder.py
src/modeling/: clustering.py  graph.py  llm.py  metrics.py  outliers.py  postprocessing.py  presentation.py  reduction.py  representation.py  text_processing.py  utils.py
src/preprocessing/: base.py  chunks.py
src/xidootopic/: __about__.py  __init__.py  xidootopic.py
src/xidootopic/embedding/: embedder.py  encoder.py  pooling.py
src/xidootopic/modeling/: clustering.py  postprocessing.py
tests/: test_chunks.py  test_preprocessing.py
tests/embedding/: test_embedder.py  test_encoder.py  test_pooling.py
tests/modeling/: test_clustering.py  test_graph.py  test_outliers.py  test_postprocessing.py  test_prsentation.py  test_representation.py  test_resolution.py  test_umap.py
tests/preprocessing/: test_preprocessing.py
trip/: huatulco.csv  la_paz.csv  puerto_vallarta.csv  riviera_nayarit.csv
